# app/Models/OrderItem.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class OrderItem extends Model
+{
+    use HasFactory;
+    public $timestamps = false;
+
+    
+    protected $fillable = ['order_id', 'item_id', 'quantity'];
+
+}
